--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,8 +1,11 @@
 @import 'variables';
 @import 'font';
 @import 'global';
+@import 'book-list';
+@import 'book-item';
 @import 'app';
+@import 'controls';
 @import 'button';
-@import 'launch-list';
-@import 'launch-item';
-@import 'select';
+@import 'header';
+@import 'utility';
+@import 'loading';
