--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -3,6 +3,7 @@ $black: #000;
 $primary-blue: #215184;
 $font-color: #545454;
 $font-family: 'Brandon Grotesque', Arial, Helvetica, sans-serif;
+$light: 300;
 $regular: 400;
 $medium: 500;
 $bold: 700;
