--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: #00695C;
+    background: $primary;
     color: $font-color;
     font-size: 1.4rem;
     overflow-x: hidden;
