--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -5,7 +5,8 @@
 @import 'book-item';
 @import 'app';
 @import 'controls';
-@import 'button';
 @import 'header';
 @import 'utility';
 @import 'loading';
+@import 'search-result';
+@import 'search';
