--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,6 +1,6 @@
 $white: #fff;
 $black: #000;
-$primary-blue: #215184;
+$primary: #00695C;
 $font-color: #545454;
 $font-family: 'Brandon Grotesque', Arial, Helvetica, sans-serif;
 $light: 300;
