--- a/src/assets/styles/controls.scss
+++ b/src/assets/styles/controls.scss
@@ -33,4 +33,14 @@
             background-image: url( '../images/chevron-left.png' );
         }
     }
+
+    @media (max-width: $breakpoint-tablet) {
+
+        &__button {
+            width: 3rem;
+            height: 3rem;
+            border-radius: 3rem;
+            background-size: 2rem 2rem;
+        }
+    }
 }
