--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -3,6 +3,7 @@
     justify-content: space-between;
     padding: 2rem 0;
     align-items: center;
+    flex-wrap: wrap;
 
     &__page-info {
         display: flex;
